--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -168,7 +168,7 @@
             <show modes="view edit" />
             <hide modes="listing" />
         </field>
-        <field name="bill_type_id" displayable="view edit add listing" localizable="view edit listing">
+        <field name="doc_type" displayable="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
         <field name="ministry_id" displayable="view edit add listing" localizable="view edit add listing">
